# Quantum_Channels_notebooks

./: .gitignore  main.py  pyproject.toml
QubitVisualisation/: 1_single_qubit.py  2_entanglement.py  ex1.py
QubitVisualisation/__marimo__/session/: 1_single_qubit.py.json  ex1.py.json
Simulator/: 3_transpilation.py  4_VLQ_to_Pennylane.py  fake_vlq.py
