[project]
name = "quantumchannels-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iqm-client[qiskit]>=34.0.3",
    "marimo>=0.23.8",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pennylane>=0.45.0",
    "pennylane-qiskit>=0.45.0",
    "playwright>=1.60.0",
    "qutip>=5.3.0",
]
